tests/invalidTest/test_8.q
# EXPECT Error:type cannot be converted
def uint16 test(){

  sint64 var5 = 1         #assign & constant num
  sint32 var6
  var6 = var5
  return 0
}

